tests/baselines/reference/spreadUnion2.errors.txt
spreadUnion2.ts(5,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'o1' must be of type '{} | { a: number; }', but here has type '{ a?: number | undefined; }'.
spreadUnion2.ts(8,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'o2' must be of type '{} | { b: number; }', but here has type '{ b?: number | undefined; }'.
spreadUnion2.ts(11,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'o3' must be of type '{} | { a: number; } | { b: number; } | { a: number; b: number; }', but here has type '{ b?: number | undefined; a?: number | undefined; }'.
spreadUnion2.ts(12,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'o3' must be of type '{} | { a: number; } | { b: number; } | { a: number; b: number; }', but here has type '{ a?: number | undefined; b?: number | undefined; }'.
spreadUnion2.ts(15,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'o4' must be of type '{} | { a: number; }', but here has type '{ a?: number | undefined; }'.
spreadUnion2.ts(18,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'o5' must be of type '{} | { b: number; }', but here has type '{ b?: number | undefined; }'.


==== spreadUnion2.ts (6 errors) ====
    declare const undefinedUnion: { a: number } | undefined;
    declare const nullUnion: { b: number } | null;
    
    var o1: {} | { a: number };
    var o1 = { ...undefinedUnion };
        ~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'o1' must be of type '{} | { a: number; }', but here has type '{ a?: number | undefined; }'.
!!! related TS6203 spreadUnion2.ts:4:5: 'o1' was also declared here.
    
    var o2: {} | { b: number };
    var o2 = { ...nullUnion };
        ~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'o2' must be of type '{} | { b: number; }', but here has type '{ b?: number | undefined; }'.
!!! related TS6203 spreadUnion2.ts:7:5: 'o2' was also declared here.
    
    var o3: {} | { a: number } | { b: number } | { a: number, b: number };
    var o3 = { ...undefinedUnion, ...nullUnion };
        ~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'o3' must be of type '{} | { a: number; } | { b: number; } | { a: number; b: number; }', but here has type '{ b?: number | undefined; a?: number | undefined; }'.
!!! related TS6203 spreadUnion2.ts:10:5: 'o3' was also declared here.
    var o3 = { ...nullUnion, ...undefinedUnion };
        ~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'o3' must be of type '{} | { a: number; } | { b: number; } | { a: number; b: number; }', but here has type '{ a?: number | undefined; b?: number | undefined; }'.
!!! related TS6203 spreadUnion2.ts:10:5: 'o3' was also declared here.
    
    var o4: {} | { a: number };
    var o4 = { ...undefinedUnion, ...undefinedUnion };
        ~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'o4' must be of type '{} | { a: number; }', but here has type '{ a?: number | undefined; }'.
!!! related TS6203 spreadUnion2.ts:14:5: 'o4' was also declared here.
    
    var o5: {} | { b: number };
    var o5 = { ...nullUnion, ...nullUnion };
        ~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'o5' must be of type '{} | { b: number; }', but here has type '{ b?: number | undefined; }'.
!!! related TS6203 spreadUnion2.ts:17:5: 'o5' was also declared here.
    
    